--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,3 +1,18 @@
-FROM python
+# Utiliser une image de base officielle de Python
+FROM python:3.9-slim
 
-# blablabla
+# Définir le répertoire de travail
+WORKDIR /app
+
+# Copier le fichier requirements.txt et installer les dépendances
+COPY requirements.txt requirements.txt
+RUN pip install --no-cache-dir -r requirements.txt
+
+# Copier le reste de l'application
+COPY . .
+
+# Exposer le port sur lequel l'application va tourner
+EXPOSE 8080
+
+# Définir la commande pour démarrer l'application
+CMD ["gunicorn", "-b", "0.0.0.0:8080", "app:app"]
