--- a/flask/Dockerfile
+++ b/flask/Dockerfile
@@ -1,18 +1,14 @@
 # Utiliser une image de base officielle de Python
-FROM python:3.9-slim
+FROM python:3.12.3
 
 # Définir le répertoire de travail
 WORKDIR /app
 
-# Copier le fichier requirements.txt et installer les dépendances
-COPY requirements.txt requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
-
 # Copier le reste de l'application
 COPY . .
 
-# Exposer le port sur lequel l'application va tourner
-EXPOSE 8080
+# Copier le fichier requirements.txt et installer les dépendances
+RUN pip install --no-cache-dir -r requirements.txt
 
 # Définir la commande pour démarrer l'application
-CMD ["gunicorn", "-b", "0.0.0.0:8080", "app:app"]
+CMD ["python", "app.py"]
