--- a/.github/workflows/mattermost.yml
+++ b/.github/workflows/mattermost.yml
@@ -8,8 +8,8 @@ env:
   app: mattermost
 
 jobs:
-  build:
-    name: Build Docker image
+  deploy:
+    name: Deploy Mattermost image
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -22,29 +22,17 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCLOUD_AUTH }}
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: europe-west9-docker.pkg.dev
-          username: _json_key
-          password: ${{ secrets.GCLOUD_AUTH }}
       - name: Lowercase actor
         id: actor
         run: echo "lower=$(echo ${{ github.actor }} | tr '[:upper:]' '[:lower:]')" >> "$GITHUB_OUTPUT"
-      - name: Compute image
-        id: compute
-        run: echo "image=${{ vars.REGISTRY }}/${{ steps.actor.outputs.lower }}-${{ env.app }}:latest" >> "$GITHUB_OUTPUT"
-      - name: Build Docker image
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          context: mattermost
-          file: mattermost/Dockerfile
-          tags: ${{ steps.compute.outputs.image }}
       - name: Deploy to Google Cloud Run
         uses: google-github-actions/deploy-cloudrun@v2
         with:
           service: ${{ steps.actor.outputs.lower }}-${{ env.app }}
-          image: ${{ steps.compute.outputs.image }}
+          image: mattermost/mattermost-team-edition
+          flags: --port=8065 --no-cpu-throttling
           env_vars: |
-            DATABASE_URL=postgres://gace_lhotellier:gace_lhotellier@35.239.186.51:5432/gace_lhotellier?sslmode=disable&connect_timeout=10
+            MM_USERNAME=gace_lhotellier
+            MM_PASSWORD=gace_lhotellier
+            MM_DBNAME=gace_lhotellier
+            MM_SQLSETTINGS_DATASOURCE=postgres://gace_lhotellier:gace_lhotellier@35.239.186.51:5432/gace_lhotellier?sslmode=disable&connect_timeout=10
